# ebolashare

./: .gitignore  COPYING  EbolaShare.pro  INSTALL  README.md  configure.ac
contrib/gitian-descriptors/: gitian-linux.yml  gitian-linux.yml~  gitian-osx-bitcoin.yml  gitian-osx-signer.yml  gitian-osx-signer.yml~  gitian-osx.yml  gitian-osx.yml~  gitian-win.yml  gitian-win.yml~  gitian.yml  gitian.yml~
contrib/gitian-descriptors/linux/: gitian-linux-ebolashare.yml
contrib/gitian-descriptors/osx/: gitian-osx-ebolashare.yml  gitian-osx-native.yml
contrib/gitian-descriptors/windows/: gitian-win-ebolashare.yml  gitian-win-qt5.yml
contrib/macdeploy/: background.xcf  detached-sig-apply.sh  fancy.plist  macdeployqtplus
depends/: funcs.mk
share/: setup.nsi  setup.nsi.in
share/qt/: Info.plist  clean_mac_info_plist.py  make_windows_icon.sh
src/: Makefile.am  base58.h  bitcoind.cpp  bitcoinrpc.cpp  checkpoints.cpp  clientversion.h  init.cpp  irc.cpp  kernel.cpp  leveldbwrapper.cpp  main.cpp  main.h  makefile.linux-mingw  makefile.mingw  makefile.osx  makefile.unix  miner.cpp  net.cpp  netbase.cpp  netbase.h  protocol.h  rpcdump.cpp  rpcmining.cpp  rpcrawtransaction.cpp  rpcwallet.cpp  util.cpp  util.h  version.cpp  wallet.cpp  walletdb.cpp
src/leveldb/: Makefile  build_config.mk  build_detect_platform
src/leveldb/db/: db_bench.cc  db_impl.cc  db_test.cc  filename.cc  repair.cc
src/leveldb/doc/: impl.html
src/leveldb/include/leveldb/: db.h  env.h
src/leveldb/util/: env_posix.cc
src/m4/: bitcoin_qt.m4
src/qt/: HashMarketApi.cpp  addressbookpage.cpp  askpassphrasedialog.cpp  assets.qrc  bitcoin.cpp  bitcoin.qrc  bitcoingui.cpp  bitcoingui.h  bitcoinstrings.cpp  bitcoinunits.cpp  blockbrowser.cpp  coincontroldialog.cpp  editaddressdialog.cpp  guiutil.cpp  guiutil.h  notificator.h  optionsdialog.cpp  optionsmodel.cpp  overviewpage.cpp  overviewpage.h  qrcodedialog.cpp  qtipcserver.cpp  qtipcserver.h  quickwidget.cpp  quickwidget.h  rpcconsole.cpp  sendcoinsdialog.cpp  sendcoinsentry.cpp  serveur.cpp  signverifymessagedialog.cpp  statisticspage.cpp  themes.qrc  transactionview.cpp  transactionview.h
src/qt/forms/: Header.ui  aboutdialog.ui  addressbookpage.ui  coincontroldialog.ui  optionsdialog.ui  overviewpage.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui  statisticspage.ui
src/qt/locale/: bitcoin_es.ts  bitcoin_nl.qm  bitcoin_nl.ts
src/qt/res/: bitcoin-qt.rc
src/qt/res/icons/: ebolashare.icns
src/qt/res/qml/: ebola.qmltypes  menubackground.qml  menubutton.qml  qmldir  toolbar.qml
src/qt/res/themes/default/: default.qss
